objects/User_Access_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Sub_Type__c</fullName>
        <label>Access Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Proxy</fullName>
                </value>
                <value>
                    <fullName>SAC (Sales Accelerated Center)</fullName>
                </value>
                <value>
                    <fullName>Call Center Agent (NGCC)</fullName>
                </value>
                <value>
                    <fullName>IT Organization</fullName>
                </value>
                <value>
                    <fullName>Transaction Support Agents</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement Presenter</fullName>
                </value>
                <value>
                    <fullName>Global Lead Admin</fullName>
                </value>
                <value>
                    <fullName>Star Agents</fullName>
                </value>
                <value>
                    <fullName>TSN Case Agent</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement &amp; Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_for_Report_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access for Report Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Read?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Alternative_Source__c</fullName>
        <inlineHelpText>What alternative source exists for the data that you are seeking through SFDC?  In other words, how are you performing your role today?</inlineHelpText>
        <label>Any Alternative Source?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <inlineHelpText>What is the business impact if you are not granted access to the SFDC data?</inlineHelpText>
        <label>Business Impact</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department of the User</description>
        <label>Recipient Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_your_Role__c</fullName>
        <label>Description of your Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Director_CEC_ID__c</fullName>
        <description>Directors CEC ID auto populated from HR</description>
        <label>Director CEC ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Name__c</fullName>
        <description>Name of the Director populated from HR</description>
        <label>Director Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directors_Email_Address__c</fullName>
        <label>Directors Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the user who needs access</description>
        <label>Recipient First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSTS_Comments__c</fullName>
        <description>Comments/Notes for GSTS</description>
        <inlineHelpText>e.g. Enter Case #</inlineHelpText>
        <label>GSTS Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_will_you_access_the_SFDC_data__c</fullName>
        <label>How often will you access the SFDC data?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc (once, or infrequent)</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intention_and_Use_of_Data__c</fullName>
        <inlineHelpText>What SFDC data do you intend to access, and how will you use it?</inlineHelpText>
        <label>Intention and Use of Data?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the user who needs access</description>
        <label>Recipient Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level 1 Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_Decision__c</fullName>
        <label>Level 1 Approver Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1_Approver__c</fullName>
        <label>Level 1 Approver</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level 2 Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver_Decision__c</fullName>
        <label>Level 2 Approver Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2_Approver__c</fullName>
        <label>Level 2 Approver</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>System Notes (Do Not Change)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territories__c</fullName>
        <label>Parent Territories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Write_Access__c</fullName>
        <label>Reason for Write Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creating Opportunity</fullName>
                </value>
                <value>
                    <fullName>Creating Accounts</fullName>
                </value>
                <value>
                    <fullName>Creating Leads</fullName>
                </value>
                <value>
                    <fullName>Creating Contacts</fullName>
                </value>
                <value>
                    <fullName>Editing Opportunity</fullName>
                </value>
                <value>
                    <fullName>Editing Accounts</fullName>
                </value>
                <value>
                    <fullName>Editing Leads</fullName>
                </value>
                <value>
                    <fullName>Editing Contacts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_ID__c</fullName>
        <description>This field captures the CEC of the user request is submitted for.</description>
        <label>Recipient ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_IsDirector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient IsDirector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipient_Title__c</fullName>
        <description>Tile of the user needing access</description>
        <label>Recipient Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Level 1 Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Level 2 Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Provisioning in Progress</fullName>
                </value>
                <value>
                    <fullName>Access Granted</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Request Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Territory_ID__c</fullName>
        <label>Requested Territory ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_ID__c</fullName>
        <description>This field captures CEC of the user</description>
        <label>Requester ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this flag is set to True once the user is created in Salesforce.com</description>
        <label>User Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Your_Manager_has_Access_to_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Your Manager has Access to SFDC?</label>
        <type>Checkbox</type>
    </fields>
    <description>This object will store all the user access requests submitted by external users to use Salesforce.com Sales Instance</description>
    <label>User Access Request</label>
    <nameField>
        <displayFormat>UAR-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Access_Level__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Recipient_ID__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Level_1_Approver__c</columns>
        <columns>Level_2_Approver__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NGCC</fullName>
        <columns>NAME</columns>
        <columns>Access_Level__c</columns>
        <columns>Access_Sub_Type__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Level_1_Approver__c</columns>
        <columns>Level_2_Approver__c</columns>
        <columns>Email__c</columns>
        <columns>Recipient_ID__c</columns>
        <columns>Requester_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>NGCC Call Center Agent</value>
        </filters>
        <label>NGCC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SFDC_User_Access_2nd_Level_approvers_User_Access_Requests</fullName>
        <filterScope>Queue</filterScope>
        <label>SFDC User Access 2nd Level approvers</label>
        <queue>SFDC_User_Access_2nd_Level_approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>User_Access_Test_User_Access_Requests</fullName>
        <filterScope>Queue</filterScope>
        <label>User Access Test</label>
        <queue>User_Access_Test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>praschan</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1_Approver__c</field>
            <operation>equals</operation>
            <value>renriver</value>
        </filters>
        <filters>
            <field>Level_1_Approver_Decision__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>praschan</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>rrochade</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Level_1_Approver__c</field>
            <operation>equals</operation>
            <value>rrochade</value>
        </filters>
        <filters>
            <field>Level_1_Approver_Decision__c</field>
            <operation>equals</operation>
        </filters>
        <label>rrochade</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>